# base32-rs

./: Cargo.toml  LICENSE
benches/: benchmark.rs
src/: decode.rs  encode.rs  lib.rs  tables.rs  tests.rs
