[package]
name = "base32"
version = "0.1.0"
authors = ["Gard Kylling <gard@kylling.io>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
alloc = []
std = []

[dev-dependencies]
criterion = "0.3.4"
proptest = "0.10.1"
rand = { version = "0.8.3", features = ["small_rng"] }

[[bench]]
name = "benchmark"
harness = false
